--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.438.0",
     "@aws-sdk/client-ses": "^3.437.0",
+    "@aws-sdk/lib-storage": "^3.438.0",
     "@faker-js/faker": "^8.1.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
