--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
     "minimist": "^1.2.8",
     "mongodb": "^5.7.0",
     "nanoid": "^5.0.1",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "socket.io": "^4.7.2"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8",
+    "utf-8-validate": "^5.0.10"
   }
 }
