--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/mime": "^3.0.1",
     "@types/minimist": "^1.2.2",
     "@types/node": "^20.5.0",
+    "@types/swagger-jsdoc": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.47.0",
@@ -55,7 +57,10 @@
     "mongodb": "^5.7.0",
     "nanoid": "^5.0.1",
     "sharp": "^0.32.5",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "yaml": "^2.3.4"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8",
