--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon --development",
+    "prod": "npx nodemon --production",
     "build": "rimraf ./dist && tsc && tsc-alias",
     "start": "node dist/index.js --production",
     "lint": "eslint .",
@@ -50,6 +51,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "formidable": "^3.5.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
